k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-monitoring-front
  name: dashboard-monitoring-front
spec:
  type: NodePort
  ports:
    - name: 80-tcp
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: dashboard-monitoring-front
