k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dashboard-monitoring-front
  name: dashboard-monitoring-front
spec:
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: dashboard-monitoring-front
    weight: 100
